--- a/app/src/scss/_pages.scss
+++ b/app/src/scss/_pages.scss
@@ -6,9 +6,63 @@
 .search-section {
   display: flex;
   flex-direction: column;
+  padding-top: 60px;
+  width: 100%;
+}
+
+@media screen and (min-width: 1000px) {
+  .search-section {
+    width: 80%;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .search-section {
+    width: 90%;
+  }
 }
 
 //Pet Dashboard
 .pets-dashboard-section {
   background-color: colors.$white;
+  display: flex;
+  flex-direction: column;
+  padding-top: 120px;
+  align-items: center;
+  background-color: colors.$darkerColor;
+}
+
+.pets-dashboard-section > * {
+  width: 100%;
+  background-color: colors.$white;
+}
+
+.pets-dashboard-section > a:first-child {
+  display: flex;
+  justify-content: center;
+  font-size: 1.5rem;
+  font-weight: bolder;
+  position: fixed;
+  top: 60px;
+  left: 0;
+  background-color: colors.$white;
+  padding: 0.5rem;
+  border-bottom: 10px solid colors.$darkerColor;
+  width: 100%;
+}
+
+.pets-dashboard-section > h1 {
+  font-size: 3rem;
+  display: flex;
+  justify-content: center;
+}
+
+.pets-dashboard-section > p {
+  padding: 0.5rem;
+}
+
+@media screen and (min-width: 600px) {
+  .pets-dashboard-section > * {
+    width: 80%;
+  }
 }
