--- a/app/src/scss/main.scss
+++ b/app/src/scss/main.scss
@@ -4,7 +4,7 @@
 @use 'pages';
 
 * {
-  // outline: 1px solid red !important;
+  outline: 1px solid red !important;
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
@@ -29,11 +29,13 @@ code {
 }
 
 #root {
-  max-width: 100vw;
-  margin: 0;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
   background-color: colors.$darkerColor;
 }
 
 section {
-  max-width: 100vw;
+  width: 100vw;
 }
