--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -13,7 +13,6 @@
   justify-content: left;
   height: 80vh;
   margin: 0.5%;
-  padding: 0rem;
   background-color: rgba(255, 255, 255, 0.959);
   border-radius: 1rem;
   margin-bottom: 2rem;
@@ -22,6 +21,12 @@
 .results-box-container:active {
   transform: scale(0.98);
   transition: all 0.2s;
+}
+
+.results-box-container > a {
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
 }
 
 .results-box-container > * {
@@ -55,7 +60,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 50%;
+  border-radius: 20%;
   background-color: white;
   padding: 0.3rem;
 }
@@ -67,11 +72,11 @@
 @media screen and (min-width: 600px) {
   .results-box-container {
     width: 49%;
-    height: 50vh;
+    height: 60vh;
     margin-bottom: 0.5rem;
   }
 
-  .results-box-container > #finder-photo {
+  #finder-photo {
     min-height: 60%;
     height: 100%;
   }
@@ -82,10 +87,6 @@
   }
 }
 @media screen and (min-width: 1000px) {
-  .results-box-container {
-    width: 24%;
-  }
-
   .fav-icon {
     width: 40px;
     height: 40px;
@@ -188,23 +189,27 @@
 }
 
 .header-container {
+  position: fixed;
   color: white;
   width: 100%;
   height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #001244;
+  z-index: 1;
 }
 
 .header-container > * {
-  max-width: 80px;
+  width: 50px;
   height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 50%;
+  border-radius: 0.5rem;
   margin-right: 0.5rem;
-  border: 1px solid white;
+  padding: 0.2rem;
+  border: 2px solid #b0cac7;
 }
 
 .header-container > div:first-child {
@@ -217,13 +222,65 @@
 .search-section {
   display: flex;
   flex-direction: column;
+  padding-top: 60px;
+  width: 100%;
 }
 
+@media screen and (min-width: 1000px) {
+  .search-section {
+    width: 80%;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .search-section {
+    width: 90%;
+  }
+}
 .pets-dashboard-section {
+  background-color: rgba(255, 255, 255, 0.959);
+  display: flex;
+  flex-direction: column;
+  padding-top: 120px;
+  align-items: center;
+  background-color: #001244;
+}
+
+.pets-dashboard-section > * {
+  width: 100%;
   background-color: rgba(255, 255, 255, 0.959);
 }
 
+.pets-dashboard-section > a:first-child {
+  display: flex;
+  justify-content: center;
+  font-size: 1.5rem;
+  font-weight: bolder;
+  position: fixed;
+  top: 60px;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.959);
+  padding: 0.5rem;
+  border-bottom: 10px solid #001244;
+  width: 100%;
+}
+
+.pets-dashboard-section > h1 {
+  font-size: 3rem;
+  display: flex;
+  justify-content: center;
+}
+
+.pets-dashboard-section > p {
+  padding: 0.5rem;
+}
+
+@media screen and (min-width: 600px) {
+  .pets-dashboard-section > * {
+    width: 80%;
+  }
+}
 * {
+  outline: 1px solid red !important;
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
@@ -245,13 +302,15 @@ code {
 }
 
 #root {
-  max-width: 100vw;
-  margin: 0;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
   background-color: #001244;
 }
 
 section {
-  max-width: 100vw;
+  width: 100vw;
 }
 
 /*# sourceMappingURL=styles.css.map */
