--- a/app/src/scss/_components.scss
+++ b/app/src/scss/_components.scss
@@ -159,7 +159,7 @@
 }
 
 .login-container > form {
-  width: 90%;
+  width: 90vw;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -169,6 +169,17 @@
 .login-container > form > * {
   width: 90%;
   margin: 1rem 0.5rem;
+}
+
+@media screen and (min-width: 1000px) {
+  .login-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .login-container > * {
+    max-width: 50vw;
+  }
 }
 
 //Send button
@@ -184,4 +195,8 @@
 .header-icon {
   max-width: 80px;
   height: 80px;
+}
+
+.option-locked {
+  background-color: rgba(255, 255, 255, 0.829);
 }
