--- a/app/src/scss/_pages.scss
+++ b/app/src/scss/_pages.scss
@@ -58,7 +58,8 @@
 }
 
 .pets-dashboard-section > p {
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
+  font-size: 1.5rem;
 }
 
 @media screen and (min-width: 600px) {
