--- a/app/src/scss/main.scss
+++ b/app/src/scss/main.scss
@@ -4,7 +4,7 @@
 @use 'pages';
 
 * {
-  outline: 1px solid red !important;
+  // outline: 1px solid red !important;
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
