--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -150,7 +150,7 @@
 }
 
 .login-container > form {
-  width: 90%;
+  width: 90vw;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -162,6 +162,16 @@
   margin: 1rem 0.5rem;
 }
 
+@media screen and (min-width: 1000px) {
+  .login-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .login-container > * {
+    max-width: 50vw;
+  }
+}
 .send-button {
   width: 80%;
   padding: 0.5rem;
@@ -173,6 +183,10 @@
 .header-icon {
   max-width: 80px;
   height: 80px;
+}
+
+.option-locked {
+  background-color: rgba(255, 255, 255, 0.829);
 }
 
 /* *********  SECTIONS ******* */
@@ -271,7 +285,8 @@
 }
 
 .pets-dashboard-section > p {
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
+  font-size: 1.5rem;
 }
 
 @media screen and (min-width: 600px) {
@@ -280,7 +295,6 @@
   }
 }
 * {
-  outline: 1px solid red !important;
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
